[package]
name = "twjson"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]

[dependencies]
oauthcli = { version = "*", features = ["hyper"] }
url = { version = "*" }
hyper = { version = "*", optional = true }
json = { version = "*" }
hyper-native-tls = { version = "*" }

[features]
default = ["hyper"]
